examples/type_system/failing/105_unknown_effect_suggestion.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/105_unknown_effect_suggestion.flx
// error[E407]: Unknown Effect
//
// Function effect annotation references unknown effect `I`.
//
//   examples/type_system/failing/105_unknown_effect_suggestion.flx:21:24
//    |
// 21 | fn main() -> Unit with I {
//    |                        ^
//    |                        - unknown effect in function annotation
//
// Hint:
//   did you mean `IO`?
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E407

fn main() -> Unit with I {
}
